# NestedSpace

./: README.md  apples.csv  example.ipynb  logging-first-model.ipynb  pyproject.toml  reference_schema.json  schema.json
src/: retriever.py  schema.py  space.py  space_manager.py  ui.py
