[tool.poetry]
name = "nestedspace"
version = "0.1.0"
description = "Track your ML experiments, data and other artifacts with minimal overhead and configs. A light, easy Experiment tracking framework"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
